--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -39,7 +39,7 @@
     <Grid Margin="10 0 10 0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
@@ -52,12 +52,15 @@
             <Image Source="{Binding ImageSource}" Stretch="UniformToFill" />
         </Viewbox>
 
-        <Button Grid.Row="2" Style="{StaticResource ScreenshotButton}" Content="Screenshot" Height="Auto" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10 10 0 10" Click="ScreenshotButton_Click" />
+        <CheckBox x:Name="checkBox" Content="Enrich the Magicks Forthwidth" HorizontalAlignment="Left" Margin="0,12,0,0" Grid.Row="2" Grid.Column="0" VerticalAlignment="Bottom"/>
+        <!--<TextBlock x:Name="detection_counter" HorizontalAlignment="Center" Margin="0" Grid.Row="2" TextWrapping="Wrap" Text="###" VerticalAlignment="Center" TextAlignment="Center" RenderTransformOrigin="0.463,3.563"/>-->
+        <StackPanel HorizontalAlignment="Right" Height="15" Margin="0,0,0,0" Grid.Row="2" VerticalAlignment="Bottom" Width="225" Orientation="Horizontal">
+            <CheckBox x:Name="captureSpellOption" Content="Capture Spell:" Margin="0" Width="94" VerticalAlignment="Center"/>
+            <TextBox x:Name="spellNameBox" TextWrapping="Wrap" Width="125" Margin="0" MaxLines="5" VerticalAlignment="Center"/>
+        </StackPanel>
 
         <StatusBar Grid.Row="3" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
             <StatusBarItem Content="{Binding StatusText}" />
         </StatusBar>
-        <CheckBox x:Name="checkBox" Content="Enrich the Magicks Forthwidth" HorizontalAlignment="Left" Margin="11,20,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-        <TextBlock x:Name="detection_counter" HorizontalAlignment="Center" Margin="0" Grid.Row="2" TextWrapping="Wrap" Text="###" VerticalAlignment="Center" TextAlignment="Center"/>
     </Grid>
 </Window>
