--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="Microsoft.Samples.Kinect.InfraredBasics.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Microsoft.Samples.Kinect.InfraredBasics.MainWindow"
         Title="Infrared Basics" 
-        Height="600" Width="700"  
+        Height="599" Width="700"  
         Closing="MainWindow_Closing">
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e" />
@@ -35,8 +36,9 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <System:Double x:Key="StatusWidth">NaN</System:Double>
     </Window.Resources>
-    <Grid Margin="9,1,10.6,-0.6">
+    <Grid Margin="9,0,10.6,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
@@ -44,30 +46,50 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Image Grid.Row="0" Source="Images\Logo.png" HorizontalAlignment="Left" Stretch="Fill" Height="32" Width="81" Margin="0 10 0 5" />
-        <Image Grid.Row="0" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="0 0 0 5" />
-        <Border Grid.Row="0" HorizontalAlignment="Right" Height="20" Margin="0,0,8,8" VerticalAlignment="Bottom" CornerRadius="3" BorderThickness="2" BorderBrush="#FFAEAEAE" Padding="2">
+        <Image Grid.Row="0" Source="Images\Logo.png" HorizontalAlignment="Left" Stretch="Fill" Height="32" Width="81" Margin="0" />
+        <Image Grid.Row="0" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="0" />
+        <Border Grid.Row="0" HorizontalAlignment="Right" Height="20" Margin="0,0,8,0" VerticalAlignment="Center" CornerRadius="3" BorderThickness="2" BorderBrush="#FFAEAEAE" Padding="2">
             <StackPanel  Orientation="Horizontal" >
-                <Label x:Name="label" Content="Active Spells:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Arial" Padding="0,0,5,0"/>
-                <TextBlock x:Name="spellsText" HorizontalAlignment="Left" Margin="0,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Padding="0,0,0,0">Text</TextBlock>
+                <Label x:Name="label" Content="Active Spells:" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Arial" Padding="0,0,5,0" Margin="0,0,0,-0.2"/>
+                <TextBlock x:Name="spellsText" HorizontalAlignment="Left" Margin="0,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Padding="0,0,0,0"><Run Text="Text"/></TextBlock>
 
             </StackPanel>
         </Border>
-        <Viewbox Grid.Row="1" HorizontalAlignment="Center">
-            <Image Source="{Binding ImageSource}" Stretch="UniformToFill" />
-        </Viewbox>
-
-        <CheckBox x:Name="checkBox" Content="Enrich the Magicks Forthwidth" HorizontalAlignment="Left" Margin="0,12,0,0" Grid.Row="2" Grid.Column="0" VerticalAlignment="Bottom"/>
-        <!--<TextBlock x:Name="detection_counter" HorizontalAlignment="Center" Margin="0" Grid.Row="2" TextWrapping="Wrap" Text="###" VerticalAlignment="Center" TextAlignment="Center" RenderTransformOrigin="0.463,3.563"/>-->
-        <StackPanel HorizontalAlignment="Right" Height="15" Margin="0,0,0,0" Grid.Row="2" VerticalAlignment="Bottom" Width="225" Orientation="Horizontal">
-            <CheckBox x:Name="captureSpellOption" Content="Capture Spell:" Margin="0" Width="94" VerticalAlignment="Center"/>
-            <TextBox x:Name="spellNameBox" TextWrapping="Wrap" Width="125" Margin="0" MaxLines="5" VerticalAlignment="Center"/>
+        <StackPanel Margin="0,0.4,0,0.2" Grid.Row="1" Orientation="Horizontal">
+            <Viewbox HorizontalAlignment="Left">
+                <Image Source="{Binding ImageSource}" Stretch="UniformToFill" />
+            </Viewbox>
+            <StackPanel Margin="8,0,0,0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" FontFamily="Myanmar Text" FontSize="24" Text="ROBOT STATUS:" Margin="0,0,0,-0.2" Width="NaN"/>
+                    <Border HorizontalAlignment="Left" VerticalAlignment="Center" BorderBrush="#FF8C8C8C" BorderThickness="4" CornerRadius="14" Padding="10" Margin="10">
+                        <TextBlock x:Name="robotStatus" TextWrapping="Wrap" Margin="0,0,0,-8" FontFamily="Myanmar Text" FontSize="24" VerticalAlignment="Center" Text=""/>
+                    </Border>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <TextBlock HorizontalAlignment="Right" TextWrapping="Wrap" VerticalAlignment="Center" FontFamily="Myanmar Text" FontSize="24" Margin="0,0,0,-0.2"><Run Text="CAST SPELL"/><Run Text=":"/></TextBlock>
+                    <Border HorizontalAlignment="Left" VerticalAlignment="Center" BorderBrush="#FF8C8C8C" BorderThickness="4" CornerRadius="14" Padding="10" Margin="10">
+                        <TextBlock x:Name="castSpell" TextWrapping="Wrap" Margin="0,0,0,-8" FontFamily="Myanmar Text" FontSize="24" VerticalAlignment="Center"><Run Text="WINGARDIUM LEVIOSA"/></TextBlock>
+                    </Border>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" FontFamily="Myanmar Text" FontSize="24" Margin="0,0,0,-0.2" Width="NaN" Text="TIME REMAINING:"/>
+                    <Border HorizontalAlignment="Left" VerticalAlignment="Center" BorderBrush="#FFFF1F1F" BorderThickness="4" CornerRadius="14" Padding="10" Margin="10">
+                        <TextBlock TextWrapping="Wrap" Margin="0,0,0,-8" FontFamily="Myanmar Text" FontSize="24" VerticalAlignment="Center"><Run Text="WINGARDIUM LEVIOSA"/></TextBlock>
+                    </Border>
+                </StackPanel>
+            </StackPanel>
         </StackPanel>
-
-        <StatusBar Grid.Row="3" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
-            <StatusBarItem Content="{Binding StatusText}" />
+        <DockPanel Grid.Row="3" Margin="0,4,0,24" >
+            <CheckBox x:Name="checkBox" Content="Enrich the Magicks Forthwidth" HorizontalAlignment="Left" Margin="0,2" VerticalAlignment="Top" Height="16"/>
+            <StackPanel Height="16" Margin="0,2" VerticalAlignment="Top" Orientation="Horizontal" HorizontalAlignment="Right">
+                <CheckBox x:Name="captureSpellOption" Content="Capture Spell:" Margin="0" Width="94" VerticalAlignment="Center"/>
+                <TextBox x:Name="spellNameBox" TextWrapping="Wrap" Width="125" Margin="0" MaxLines="5" VerticalAlignment="Center"/>
+            </StackPanel>
+        </DockPanel>
+        <StatusBar Grid.Row="4" HorizontalAlignment="Stretch" x:Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
+            <StatusBarItem Content="{Binding StatusText}" VerticalAlignment="Bottom" Height="22" />
         </StatusBar>
-        <Button x:Name="button" Content="Test Cast" HorizontalAlignment="Left" Margin="193,4.2,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" Click="OnTextClick"/>
 
     </Grid>
 </Window>
